[package]
name = "rocksdb_datastructures"
description = "wrapper RocksDB wrapper for Rust, adding datastructures functionnalities"
repository = "https://github.com/gdnathan/rocksdb-datastructures.rs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rocksdb = "0.21.0"
byteorder = "1.4.3"

[dev-dependencies]
tempfile = "3.5.0"
