[package]
name = "rocksdb_datastructures"
description = "wrapper RocksDB wrapper for Rust, adding datastructures functionnalities"
repository = "https://github.com/gdnathan/rocksdb-datastructures.rs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.21.0"
byteorder = "1.4.3"
tokio = { version = "^1.0.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.5.0"
